--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>sVg science project: Can you Pee better than Spanna?</title>
+  <title>OBF Christmas Pee not Tree!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
@@ -149,8 +149,8 @@
         <div className="min-h-screen w-full bg-gradient-to-b from-indigo-50 to-white text-gray-900">
           <div className="mx-auto max-w-md p-4 pb-24">
             <header className="py-4 text-center">
-              <h1 className="text-3xl font-extrabold tracking-tight">sVg science project: Can you Pee better than Spanna?</h1>
-              <p className="text-sm text-gray-600">Tap at the perfect moment to hit Myth’s shield.</p>
+              <h1 className="text-3xl font-extrabold tracking-tight">OBF Christmas Pee competition: Can you Pee better than the other?</h1>
+              <p className="text-sm text-gray-600">Tap at the perfect moment to hit PoOlines’s shield.</p>
             </header>
 
             <Card className="mb-4">
@@ -216,7 +216,7 @@
                       <line x1="10" y1="26" x2="15" y2="28"/>
                     </g>
                     <text x="10" y="18" textAnchor="middle" fontSize="3" fill="#111827">{name||"You"}</text>
-                    {/* Myth + shield (facing player) */}
+                    {/* PoOline + shield (facing player) */}
                     <g transform="translate(85,0)" stroke="#111827" strokeWidth="1.6" strokeLinecap="round">
                       <circle cx="0" cy="24" r="3" fill="none"/>
                       <line x1="0" y1="27" x2="0" y2="32"/>
@@ -225,7 +225,7 @@
                       <line x1="0" y1="26" x2="-6" y2="28"/>
                       <polygon points="-14,24 -7,22 -7,30 -14,32" fill="#93c5fd" stroke="#1e3a8a"/>
                     </g>
-                    <text x="85" y="18" textAnchor="middle" fontSize="3" fill="#111827">Myth</text>
+                    <text x="85" y="18" textAnchor="middle" fontSize="3" fill="#111827">PoOline</text>
 
                     {/* Trajectory */}
                     {showJet && distResult!=null && (
@@ -283,7 +283,7 @@
             )}
 
             <footer className="py-8 text-center text-xs text-gray-500">
-              Tap anywhere on the strength bar to lock it. The yellow jet appears after you tap and can hit Myth’s shield with perfect timing!
+              Tap anywhere on the strength bar to lock it. The yellow jet appears after you tap and can hit PoOline’s shield with perfect timing!
             </footer>
           </div>
         </div>
