--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db=firebase.firestore();
-    const scoresRef=db.collection("scores");
+    const scoresRef=db.collection("scores_obf");
 
     const Card=({children,className=""})=> <div className={`rounded-2xl shadow-lg bg-white p-4 ${className}`}>{children}</div>;
     const Button=({children,onClick,disabled,className=""})=> (
