--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ Easiest: change the collection path per site<!doctype html>
       // generous buffs (easy mode)
       const attrs=useMemo(()=>{
         const p=new Set(picks);
-        const aim=1+(p.has("coke")?1.0:0);
+        const aim=1+(p.has("coke")?0.5:0);
         const strength=1+(p.has("fanta")?0.5:0);
-        const push=p.has("sprite")?15:0;
+        const push=p.has("sprite")?12:0;
         return {aim,strength,push};
       },[picks]);
 
@@ -184,7 +184,7 @@ Easiest: change the collection path per site<!doctype html>
                 <div>
                   <div className="text-sm font-medium">Pick two drinks for buffs</div>
                   <div className="mt-2 grid grid-cols-3 gap-2">
-                    {[{id:"coke",name:"Coca-Cola",desc:"Aim",emoji:"🥤"},{id:"fanta",name:"Fanta",desc:"Strength",emoji:"🍊"},{id:"sprite",name:"Sprite",desc:"Push",emoji:"🛡️"}].map(o=> (
+                    {[{id:"coke",name:"Lemonade",desc:"Aim",emoji:"🍋"},{id:"fanta",name:"Fanta",desc:"Strength",emoji:"🍼"},{id:"sprite",name:"Wine",desc:"Push",emoji:"🍷"}].map(o=> (
                       <button key={o.id} onClick={()=>togglePick(o.id)}
                         className={`rounded-2xl border px-3 py-3 text-center ${picks.includes(o.id)?"border-indigo-600 bg-indigo-50":"border-gray-300 bg-white"}`}>
                         <div className="text-2xl">{o.emoji}</div>
