--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-If you want separate leaderboards:
-Easiest: change the collection path per site<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
